RESOLVED FIXED 261677
[WGSL] Global variable rewriter is wrong for overrides
https://bugs.webkit.org/show_bug.cgi?id=261677
Summary [WGSL] Global variable rewriter is wrong for overrides
Tadeu Zagallo
Reported 2023-09-18 07:18:44 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-18 07:18:55 PDT
Tadeu Zagallo
Comment 2 2023-09-18 07:21:08 PDT
EWS
Comment 3 2023-09-19 02:17:06 PDT
Committed 268115@main (0a03496ec0c1): <https://commits.webkit.org/268115@main> Reviewed commits have been landed. Closing PR #17861 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.