[WGSL] Global variable rewriter is wrong for overrides https://bugs.webkit.org/show_bug.cgi?id=261677 rdar://115655426

Reviewed by Dan Glastonbury.

When determining which global variables were used, the rewriter should skip the
path that deals with resources when visiting overrides, as they aren't resources.
The fix is trivial, I originally wrote a `break` where it should be `continue`

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::determineUsedGlobals):

Canonical link: https://commits.webkit.org/268115@main